# zerotier-file-transfer

./: .gitignore  CMakeLists.txt  README.md  build.sh  vswitch.py
include/: file_transfer.hpp  tap_device.hpp  vport.hpp
src/: file_transfer.cpp  main.cpp  tap_device.cpp  vport.cpp
